<resources>
    <string name="app_name">REvMObDemo</string>
    <string name="banner_ad_unit_id">ca-app-pub-4355464061231348/9199553712</string>
    <string name="banner_ad_unit_id1">ca-app-pub-4355464061231348/8920352113</string>
    <string name="banner_ad_unit_id2">ca-app-pub-4355464061231348/9137018119</string>
    <string name="banner_ad_unit_id3">ca-app-pub-4355464061231348/1613751318</string>
    <string name="banner_ad_unit_id4">ca-app-pub-4355464061231348/3090484518</string>
    <string name="banner_ad_unit_id6">ca-app-pub-4355464061231348/7520684111</string>
    <string name="banner_ad_unit_id5">ca-app-pub-4355464061231348/8997417315</string>
    <string name="banner_ad_unit_id7">ca-app-pub-4355464061231348/1474150515</string>
    <string name="banner_ad_unit_id8">ca-app-pub-4355464061231348/2950883712</string>
    <string name="banner_ad_unit_id9">ca-app-pub-4355464061231348/4427616910</string>
</resources>
