<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.indianic.revmobdemo.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="FLUID"
        android:visibility="gone"
        ads:adUnitId="@string/banner_ad_unit_id1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id2" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id3" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        android:visibility="gone"
        ads:adUnitId="@string/banner_ad_unit_id4" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id5" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id6" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id7" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LEADERBOARD"
        ads:adUnitId="@string/banner_ad_unit_id8" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        android:visibility="gone"
        ads:adUnitId="@string/banner_ad_unit_id9" />
</LinearLayout>
   </ScrollView>
</RelativeLayout>
